Fixed preformatted table overflowing

--- a/src/scss/components/ExpandableTensor.scss
+++ b/src/scss/components/ExpandableTensor.scss
@@ -11,4 +11,8 @@
             font-weight: 700;
         }
     }
+
+    .full-tensor {
+        white-space: preserve-breaks;
+    }
 }
